test/Fail/Issue4775.err
Issue4775.agda:16.8-31: error: [ShouldBeRecordPattern]
Expected record pattern
when checking that the expression
λ .patternInTele0 @ (y1 , isSuc y2) → Nat has type
Σ Nat IsSuc → Set
